syntax = "proto3";
package message.event;

import "google/protobuf/timestamp.proto";

option java_package = "ru.yandex.practicum.grpc.telemetry.hubrouter";
option java_outer_classname = "Message";

message DeviceActionProto {
  string device_id = 1;
  string type = 2;
  int32  value = 3;
}

message DeviceActionRequest {
  string hub_id = 1;
  string scenario_name = 2;
  DeviceActionProto action = 3;
  google.protobuf.Timestamp timestamp = 4;
}