syntax = "proto3";

package telemetry.messages.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

/**
 * Событие от любого сенсора.
 * Общие поля: id сенсора, время, id хаба.
 * Полезная нагрузка — в oneof payload.
 */
message SensorEventProto {
  string id = 1;                               // идентификатор сенсора/события
  google.protobuf.Timestamp timestamp = 2;     // время события (UTC)
  string hub_id = 3;                            // идентификатор связанного хаба

  oneof payload {                               // данные конкретного устройства
    MotionSensorProto       motion_sensor_event       = 4;
    TemperatureSensorProto  temperature_sensor_event  = 5;
    LightSensorProto        light_sensor_event        = 6;
    ClimateSensorProto      climate_sensor_event      = 7;
    SwitchSensorProto       switch_sensor_event       = 8;
  }
}

/** Датчик движения */
message MotionSensorProto {
  uint32 link_quality = 1;  // 0..N, чем выше — тем лучше
  bool   motion       = 2;  // есть движение
  uint32 voltage      = 3;  // мВ/В — неотрицательное
}

/** Температурный датчик */
message TemperatureSensorProto {
  int32  temperature_c = 1; // Цельсий: может быть отрицательной
  int32  temperature_f = 2; // Фаренгейт: может быть отрицательной
}

/** Датчик освещённости */
message LightSensorProto {
  uint32 link_quality = 1;  // 0..N
  uint32 luminosity   = 2;  // люксы: 0..N
}

/** Климатический датчик */
message ClimateSensorProto {
  int32  temperature_c = 1; // Цельсий
  uint32 humidity      = 2; // 0..100 (%)
  uint32 co2_level     = 3; // ppm: 0..N
}

/** Переключатель (смарт-кнопка/реле) */
message SwitchSensorProto {
  bool state = 1; // true — включен, false — выключен
}